pages/docs/v2/integrations/now-for-github.mdx
import { withAmp } from 'next/amp'
import Doc from '~/components/layout/docs'
import Now from '~/components/text/now'
import { Image } from '~/components/media'
import Caption from '~/components/text/caption'
import { TerminalInput } from '~/components/text/terminal'
import { InlineCode } from '~/components/text/code'
import Note from '~/components/text/note'
import { GenericLink } from '~/components/text/link'
import Card from '~/components/card'

export const meta = {
  title: 'Now for GitHub',
  description:
    'Deploy each change in your GitHub repositories with Now to share and test with your colleagues. Instant share-able links to your work with each push. Automatically alias your changes to production.',
  editUrl: 'pages/docs/v2/integrations/now-for-github.mdx',
  lastEdited: '2019-03-23T15:42:10.000Z'
}

Now for GitHub is an app for GitHub users or organizations that automatically deploys and aliases changes to repositories with Now.

The Now for GitHub integration features:

- Deploys every push in branches and pull requests to preview changes live
- Aliases the most recent changes from the master branch
- Instant rollbacks when reverting changes that have been aliased

<Image
src={`${process.env.IMAGE_ASSETS_URL}/blog/now-for-github/ci.png`}
width={581}
height={185}
/>
<Caption>Now for GitHub providing a deployment for a GitHub pull request.</Caption>

## Connecting the App to Your GitHub Account or Organization

Now for GitHub is directly connected with your ZEIT account and can be linked from within your [account](/account) or team settings. Within the settings page under the "General" tab, the first section will offer for you to install Now for GitHub if it is not already installed.

<Image
src={`${process.env.IMAGE_ASSETS_URL}/docs/now-for-github/github-connect.png`}
width={1448/2}
height={484/2}
/>
<Caption>The Now for GitHub installation section within the account or team general settings page.</Caption>

If you are a new user signing up, this process can also be started from within the onboarding stage.

<Image
src={`${process.env.IMAGE_ASSETS_URL}/docs/now-for-github/onboarding.png`}
width={1492/2}
height={1212/2}
/>
<Caption>The Now for GitHub installation section within the account or team onboarding.</Caption>

Clicking the "Install Now for GitHub" button will take you to GitHub where they will prompt you, if you have an account belonging to any organizations, which profile the installation should be installed with. You can pick either your GitHub account or any of the organizations you have access to.

If you are not part of any organization, you will skip straight to the repository selection.

For organizations that you have limited permissions for, GitHub will ask you to request access to install the integration. Once requested, the organization's owner will need to approve the integration.

<Image
  src={`${process.env.IMAGE_ASSETS_URL}/docs/now-for-github/profile-selection.png`}
  width={1638/2}
  height={1268/2}
/>
<Caption>The account or organization selection step on GitHub.</Caption>

With an account or organization selected, GitHub will now ask for which repositories Now for GitHub should work with. In this step you are able to allow all repositories to be deployed or an optional set of repositories.

<Note>
  Now will not attempt to deploy a repository without being{' '}
  <GenericLink href="#usage">
    configured to with a <InlineCode>now.json</InlineCode> file
  </GenericLink>
  . It is safe to enable "All repositories" to use Now for GitHub without unintended
  side-effects.
</Note>

With the GitHub profile and repositories chosen for Now for GitHub to work with, the application will be ready to start using. The next step is to prepare the repository for Now to deploy.

## Usage

Now for GitHub requires a `now.json` file to exist in the root of the repository to begin deploying that repository.

A `now.json` file is a way to configure the deployments Now will make using your code. To get started deploying from your repository, the `now.json` configuration does not need any specific setup, you will only need a valid JSON file. For example, you can use an empty object (`{}`) for the file to be valid and recognized by Now to start deploying.

With the repository correctly configured, Now for GitHub will start deploying the app.

## Default Behavior

### A Deployment for Each Push

Now for GitHub will **deploy every push by default**. This includes pushes to any branch that includes a `now.json` and any pull requests made from those branches. This allows those working within the repository to preview changes made before the changes are pushed to production.

With each new push, if Now is already building a previous commit, Now will cancel that current build to start the most recent commit so that you always have the latest changes deployed as quickly as possible.

### Aliasing the Default Branch

If [an alias is set within the `now.json` file](/docs/v2/domains-and-aliases/aliasing-a-deployment), pushes and merges to the [default branch](https://help.github.com/articles/setting-the-default-branch/) (commonly "master") will be aliased automatically and made live to those aliases with the latest deployment made with a push.

For example, the following `now.json` configuration will make Now for GitHub alias the most recent push to `my-zeit-website.com` by default.

```json
{
  "alias": ["my-zeit-website.com"]
}
```

If you decide to revert a commit that has already been aliased, the previous commit's deployment will automatically be aliased instantly; providing you with instant rollbacks.

### Staging Aliases for the Latest Changes for Each Pull Request

The latest push to any pull request will automatically be aliased to a unique URL based on the project name, branch, and team or username. These URLs will be given through a comment on each pull request. For more on automatic aliases for git pushes and beyond in the [Aliasing Documentation](/docs/v2/domains-and-aliases/aliasing-a-deployment/#git-staging-aliases).

### Deployment Authorizations for Forks

If you recieve a pull request from a fork of your repository and there is either a change to the [`now.json`](/docs/v2/deployments/configuration) file or there are [secrets](/docs/v2/deployments/environment-variables-and-secrets/#securing-environment-variables-using-secrets) used in your project; Now will require an authorization from you or a member of your team to deploy the pull request.

This behavior protects you and your project from a leak of sensitive information.

## Extending Your GitHub Workflow

Now for GitHub uses the deployment API to bring you an extended user interface both in GitHub, when showing deployments, and Slack, if you have notifications setup using the [Slack GitHub app](https://slack.github.com).

You will see all of your deployments, production or staging, from within GitHub in its own page. See the page for this very documentation: <https://github.com/zeit/docs/deployments>

Due to using GitHub's Deployments API, you will also be able to integrate with other services through [GitHub's checks](https://help.github.com/en/articles/about-status-checks). Now for GitHub will provide the deployment URL to the checks that require it, for example; to a testing suite such as [Ghost Inspector](https://ghostinspector.com/docs/integration/github/).

<Image
  src={`${process.env.ASSETS}/docs/now-for-github/github-checks.png`}
  width={1738/2}
  height={1046/2}
/>
<Caption style={{marginTop: '-40px'}}>The checks UI from GitHub containing Now and Ghost Inspector.</Caption>

## Configuration

### Disabling Now for GitHub with `now.json`

To disable Now for a GitHub repository, use the following configuration option in the `now.json` file:

```json
{
  "github": {
    "enabled": false
  }
}
```

<Caption>
  This example is of an entire <InlineCode>now.json</InlineCode> file with the
  noted configuration option to disable Now for GitHub.
</Caption>

Disabling Now for GitHub with this configuration option will prevent Now from [deploying any push](#a-deployment-for-each-push) or [aliasing the changes](#aliasing-the-default-branch) when merged to the default branch.

### Disabling Auto-Aliasing

To stop Now from [automatically aliasing the default branch](#aliasing-the-default-branch) to any alias setup within the `now.json` file, use the following configuration option.

```json
{
  "alias": ["my-zeit-website.com"],
  "github": {
    "autoAlias": false
  }
}
```

<Caption>
  This example is of an entire <InlineCode>now.json</InlineCode> file with the
  noted configuration option to disable auto-aliasing with Now for GitHub. The
  file also includes an example setup alias.
</Caption>

### Disable Commenting with Silent Mode

To stop Now from commenting on pull requests and commits, use the following configuration option in [a `now.json` file](/docs/v2/deployments/configuration) for the repository you want to stop this behavior in.

<Note>
  Although Now will stop commenting, it will not stop deploying the latest
  updates. For this configuration option, see{' '}
  <GenericLink href="#disabling-now-for-github-with-now.json">
    disabling Now for GitHub
  </GenericLink>
</Note>

```json
{
  "github": {
    "silent": true
  }
}
```

### Disable Auto Job Cancellation

To stop Now from canceling in-progress builds to prioritise building newer commits, use the following configuration option in [a `now.json` file](/docs/v2/deployments/configuration) for the repository that this behavior should exist in.

```json
{
  "github": {
    "autoJobCancelation": false
  }
}
```

## Included Environment Variables

You may want to use different workflows and use different APIs based on Git information.<br/>
In order to support that, Now will deploy your app with following built-in environment variables.

| Variable Key                     | Description                                                                                                         |
| -------------------------------- | ------------------------------------------------------------------------------------------------------------------- |
| `NOW_GITHUB_DEPLOYMENT`          | An indicator for whether the app was deployed by Now for GitHub.                                                    |
| `NOW_GITHUB_ORG`                 | The GitHub organisation who the app belongs to.                                                                     |
| `NOW_GITHUB_REPO`                | The origin repository of the app.                                                                                   |
| `NOW_GITHUB_COMMIT_ORG`          | The organisation of which the commit belongs. For example, when submitting a pull request from a forked repository. |
| `NOW_GITHUB_COMMIT_REPO`         | The repository of which the commit belongs. For example, when submitting a pull request from a forked repository.   |
| `NOW_GITHUB_COMMIT_REF`          | The branch that the app was deployed using.                                                                         |
| `NOW_GITHUB_COMMIT_SHA`          | The [sha](https://help.github.com/articles/github-glossary/#commit) of the commit the app was deployed using.       |
| `NOW_GITHUB_COMMIT_AUTHOR_LOGIN` | The username belonging to the author of the commit that the project was deployed using.                             |
| `NOW_GITHUB_COMMIT_AUTHOR_NAME`  | The name belonging to the author of the commit that the project was deployed using.                                 |

<Note>
  You can access these as{' '}
  <GenericLink href="/docs/v2/deployments/configuration#build-env">
    build environment variables
  </GenericLink>{' '}
  also.
</Note>

## Read Next

Learn more about deploying your apps with Now using the following resources:

<Card title="Deployment Basics" href="/docs/v2/deployments/basics">
  Learn how to deploy any application with Now.
</Card>

<Card title="Deployments with Builds" href="/docs/v2/deployments/builds">
  Builds on Now create a production-ready output from your source files.
</Card>

<Card title="Control Your Paths with Routes" href="/docs/v2/deployments/routes">
  Control your deployment's paths in detail with routes.
</Card>

export default withAmp(({ children }) => <Doc meta={meta}>{children}</Doc>, {
  hybrid: true
})
